# rust-ai-buddy

./: .gitignore  Cargo.toml  README.md
buddy/: buddy.toml  instructions.md
buddy/files/: best-practices.md
crates/ai-buddy/: Cargo.toml
crates/ai-buddy-app/: Cargo.toml
crates/ai-buddy-app/src/: main.rs
crates/ai-buddy-cli/: Cargo.toml
crates/ai-buddy-cli/src/: error.rs  main.rs
crates/ai-buddy-cli/src/utils/: cli.rs  mod.rs
crates/ai-buddy/src/: error.rs  event.rs  lib.rs
crates/ai-buddy/src/ais/: asst.rs  event.rs  mod.rs  msg.rs  types.rs
crates/ai-buddy/src/buddy/: event.rs  mod.rs
crates/ai-buddy/src/utils/: files.rs  mod.rs
src/: main.rs
src/ais/: asst.rs  mod.rs
src/buddy/: config.rs  mod.rs
src/utils/: cli.rs  mod.rs
