[package]
name = "ai-buddy"
version = "0.0.1"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
# unused = "allow" # For early dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
# -- AI
async-openai = "0.17"
# -- D/Serialize
toml = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# -- Cli
dialoguer = "0.11"
console = "0.15"
textwrap = "0.16"
# -- Files
walkdir = "2"
globset = "0.4"
# -- Others
derive_more = {version = "1.0.0-beta", features = ["from", "display", "deref"] }
